# project2_drobkov_dpo

./: .gitignore  Makefile  README.md  db_meta.json  pyproject.toml
src/: decorator.py
src/primitive_db/: __init__.py  core.py  engine.py  main.py  parser.py  utils.py
